--- a/index.html
+++ b/index.html
@@ -662,8 +662,8 @@
                 <div class="col-lg-12">
                     <div class="text-container">
                         <div class="above-heading">NEWSLETTER</div>
-                        <h2>Stay Updated From Us by Subscribing TheWebsiteBuilder.</h2>
-s
+                        <h2>Stay Updated From Us by Subscribing TheWebsiteBuilders.</h2>
+
                         <!-- Newsletter Form -->
                         <form id="newsletterForm" data-toggle="validator" data-focus="false">
                             <div class="form-group">
