--- a/tamplate.html
+++ b/tamplate.html
@@ -88,7 +88,7 @@
 
                 </ul>
                 <span class="nav-item">
-                    <a class="btn-outline-sm" href="log-in.html">Place Order</a>
+                    <a class="btn-outline-sm" href="https://wa.me/+918954947472?text=Hey! I want to Place an order.">Place Order</a>
                 </span>
             </div>
         </div> <!-- end of container -->
@@ -255,7 +255,7 @@
                     <!-- end of card -->
 
                     <div class="button-wrapper">
-                        <a class="btn-solid-reg page-scroll" href="...">Place Order For New Tamplate</a>
+                        <a class="btn-solid-reg page-scroll" href="https://wa.me/+918954947472?text=Hey! I want to Place an order">Place Order For New Tamplate</a>
                     </div>
 
                 </div> <!-- end of col -->
