--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                                         <a class="btn-solid-reg popup-with-move-anim" href="https://wa.me/+918954947472?text=Hey! I want to Place an order">Place
                                             Your Order</a>
                                         <br><br>
-                                        <a class="btn-solid-reg popup-with-move-anim" href="">Demo Tamplates</a>
+                                        <a class="btn-solid-reg popup-with-move-anim" href="/tamplate.html">Demo Tamplates</a>
                                     </div> <!-- end of text-container -->
                                 </div> <!-- end of col -->
                             </div> <!-- end of row -->
