--- a/tamplate.html
+++ b/tamplate.html
@@ -131,7 +131,7 @@
                         <div class="card-body">
 
                             <div class="button-wrapper">
-                                <a class="btn-solid-reg page-scroll" href="...">View</a>
+                                <a class="btn-solid-reg page-scroll" href="tamplate/1.Above Free Website Template - Free-CSS.com/above/index.html">View</a>
                                 <a class="btn-solid-reg page-scroll" href="...">Select</a>
                             </div>
 
@@ -149,7 +149,7 @@
                         <div class="card-body">
 
                             <div class="button-wrapper">
-                                <a class="btn-solid-reg page-scroll" href="...">View</a>
+                                <a class="btn-solid-reg page-scroll" href="tamplate/2.Complex Free Website Template - Free-CSS.com/complex/index.html">View</a>
                                 <a class="btn-solid-reg page-scroll" href="...">Select</a>
                             </div>
                         </div>
@@ -164,7 +164,7 @@
                         <div class="card-body">
 
                             <div class="button-wrapper">
-                                <a class="btn-solid-reg page-scroll" href="...">View</a>
+                                <a class="btn-solid-reg page-scroll" href="tamplate/3.DevFolio Free Website Template - Free-CSS.com/developer-portfolio-template/index.html">View</a>
                                 <a class="btn-solid-reg page-scroll" href="...">Select</a>
                             </div>
                         </div>
@@ -178,7 +178,7 @@
                         <div class="card-body">
 
                             <div class="button-wrapper">
-                                <a class="btn-solid-reg page-scroll" href="...">View</a>
+                                <a class="btn-solid-reg page-scroll" href="tamplate/4.DevFolio Free Website Template - Free-CSS.com (1)/DevFolio/index.html">View</a>
                                 <a class="btn-solid-reg page-scroll" href="...">Select</a>
                             </div>
                         </div>
@@ -192,7 +192,7 @@
                         <div class="card-body">
 
                             <div class="button-wrapper">
-                                <a class="btn-solid-reg page-scroll" href="...">View</a>
+                                <a class="btn-solid-reg page-scroll" href="tamplate/5.Elegance Free Website Template - Free-CSS.com/templatemo_528_elegance/index.html">View</a>
                                 <a class="btn-solid-reg page-scroll" href="...">Select</a>
                             </div>
                         </div>
@@ -206,7 +206,7 @@
                         <div class="card-body">
 
                             <div class="button-wrapper">
-                                <a class="btn-solid-reg page-scroll" href="...">View</a>
+                                <a class="btn-solid-reg page-scroll" href="tamplate/6.Folio Free Website Template - Free-CSS.com/Folio/index.html">View</a>
                                 <a class="btn-solid-reg page-scroll" href="...">Select</a>
                             </div>
                         </div>
@@ -220,7 +220,7 @@
                         <div class="card-body">
 
                             <div class="button-wrapper">
-                                <a class="btn-solid-reg page-scroll" href="...">View</a>
+                                <a class="btn-solid-reg page-scroll" href="tamplate/7.Girly Free Website Template - Free-CSS.com/girly/index.html">View</a>
                                 <a class="btn-solid-reg page-scroll" href="...">Select</a>
                             </div>
                         </div>
@@ -234,7 +234,7 @@
                         <div class="card-body">
 
                             <div class="button-wrapper">
-                                <a class="btn-solid-reg page-scroll" href="...">View</a>
+                                <a class="btn-solid-reg page-scroll" href="tamplate/8.Marvel Free Website Template - Free-CSS.com/2115_marvel/index.html">View</a>
                                 <a class="btn-solid-reg page-scroll" href="...">Select</a>
                             </div>
                         </div>
@@ -248,7 +248,7 @@
                         <div class="card-body">
 
                             <div class="button-wrapper">
-                                <a class="btn-solid-reg page-scroll" href="...">View</a>
+                                <a class="btn-solid-reg page-scroll" href="tamplate/Nickie Free Website Template - Free-CSS.com/nickie/index.html">View</a>
                                 <a class="btn-solid-reg page-scroll" href="...">Select</a>
                             </div>
                         </div>
