--- a/tamplate.html
+++ b/tamplate.html
@@ -33,6 +33,18 @@
 
     <!-- Favicon  -->
     <link rel="icon" href="images/favicon.png">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-56PCJE0VEC"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-56PCJE0VEC');
+    </script>
+
+
 </head>
 
 <body data-spy="scroll" data-target=".fixed-top">
@@ -131,7 +143,8 @@
                         <div class="card-body">
 
                             <div class="button-wrapper">
-                                <a class="btn-solid-reg page-scroll" href="tamplate/1.Above Free Website Template - Free-CSS.com/above/index.html">View</a>
+                                <a class="btn-solid-reg page-scroll"
+                                    href="tamplate/1.Above Free Website Template - Free-CSS.com/above/index.html">View</a>
                                 <a class="btn-solid-reg page-scroll" href="...">Select</a>
                             </div>
 
@@ -149,7 +162,8 @@
                         <div class="card-body">
 
                             <div class="button-wrapper">
-                                <a class="btn-solid-reg page-scroll" href="tamplate/2.Complex Free Website Template - Free-CSS.com/complex/index.html">View</a>
+                                <a class="btn-solid-reg page-scroll"
+                                    href="tamplate/2.Complex Free Website Template - Free-CSS.com/complex/index.html">View</a>
                                 <a class="btn-solid-reg page-scroll" href="...">Select</a>
                             </div>
                         </div>
@@ -164,7 +178,8 @@
                         <div class="card-body">
 
                             <div class="button-wrapper">
-                                <a class="btn-solid-reg page-scroll" href="tamplate/3.DevFolio Free Website Template - Free-CSS.com/developer-portfolio-template/index.html">View</a>
+                                <a class="btn-solid-reg page-scroll"
+                                    href="tamplate/3.DevFolio Free Website Template - Free-CSS.com/developer-portfolio-template/index.html">View</a>
                                 <a class="btn-solid-reg page-scroll" href="...">Select</a>
                             </div>
                         </div>
@@ -178,7 +193,8 @@
                         <div class="card-body">
 
                             <div class="button-wrapper">
-                                <a class="btn-solid-reg page-scroll" href="tamplate/4.DevFolio Free Website Template - Free-CSS.com (1)/DevFolio/index.html">View</a>
+                                <a class="btn-solid-reg page-scroll"
+                                    href="tamplate/4.DevFolio Free Website Template - Free-CSS.com (1)/DevFolio/index.html">View</a>
                                 <a class="btn-solid-reg page-scroll" href="...">Select</a>
                             </div>
                         </div>
@@ -192,7 +208,8 @@
                         <div class="card-body">
 
                             <div class="button-wrapper">
-                                <a class="btn-solid-reg page-scroll" href="tamplate/5.Elegance Free Website Template - Free-CSS.com/templatemo_528_elegance/index.html">View</a>
+                                <a class="btn-solid-reg page-scroll"
+                                    href="tamplate/5.Elegance Free Website Template - Free-CSS.com/templatemo_528_elegance/index.html">View</a>
                                 <a class="btn-solid-reg page-scroll" href="...">Select</a>
                             </div>
                         </div>
@@ -206,7 +223,8 @@
                         <div class="card-body">
 
                             <div class="button-wrapper">
-                                <a class="btn-solid-reg page-scroll" href="tamplate/6.Folio Free Website Template - Free-CSS.com/Folio/index.html">View</a>
+                                <a class="btn-solid-reg page-scroll"
+                                    href="tamplate/6.Folio Free Website Template - Free-CSS.com/Folio/index.html">View</a>
                                 <a class="btn-solid-reg page-scroll" href="...">Select</a>
                             </div>
                         </div>
@@ -220,7 +238,8 @@
                         <div class="card-body">
 
                             <div class="button-wrapper">
-                                <a class="btn-solid-reg page-scroll" href="tamplate/7.Girly Free Website Template - Free-CSS.com/girly/index.html">View</a>
+                                <a class="btn-solid-reg page-scroll"
+                                    href="tamplate/7.Girly Free Website Template - Free-CSS.com/girly/index.html">View</a>
                                 <a class="btn-solid-reg page-scroll" href="...">Select</a>
                             </div>
                         </div>
@@ -234,7 +253,8 @@
                         <div class="card-body">
 
                             <div class="button-wrapper">
-                                <a class="btn-solid-reg page-scroll" href="tamplate/8.Marvel Free Website Template - Free-CSS.com/2115_marvel/index.html">View</a>
+                                <a class="btn-solid-reg page-scroll"
+                                    href="tamplate/8.Marvel Free Website Template - Free-CSS.com/2115_marvel/index.html">View</a>
                                 <a class="btn-solid-reg page-scroll" href="...">Select</a>
                             </div>
                         </div>
@@ -248,14 +268,15 @@
                         <div class="card-body">
 
                             <div class="button-wrapper">
-                                <a class="btn-solid-reg page-scroll" href="tamplate/Nickie Free Website Template - Free-CSS.com/nickie/index.html">View</a>
+                                <a class="btn-solid-reg page-scroll"
+                                    href="tamplate/Nickie Free Website Template - Free-CSS.com/nickie/index.html">View</a>
                                 <a class="btn-solid-reg page-scroll" href="...">Select</a>
                             </div>
                         </div>
                     </div> <!-- end of card -->
                     <!-- end of card -->
 
-                   
+
 
                     <div class="button-wrapper">
                         <a class="btn-solid-reg page-scroll"
