--- a/index.html
+++ b/index.html
@@ -336,10 +336,9 @@
                                             </li>
 
                                         </ul>
-                                        <a class="btn-solid-reg popup-with-move-anim" href="https://wa.me/+918954947472?text=Hey! I want to Place an order">Place
-                                            Your Order</a>
-                                        <br><br>
-                                        <a class="btn-solid-reg popup-with-move-anim" href="/tamplate.html">Demo Tamplates</a>
+                                        <a class="btn btn-primary" href="https://wa.me/+918954947472?text=Hey! I want to Place an order." role="button">Place Your Order</a>
+                                        <a class="btn btn-primary" href="/tamplate.html" role="button">Go to Demo Tamplates</a>
+                                        
                                     </div> <!-- end of text-container -->
                                 </div> <!-- end of col -->
                             </div> <!-- end of row -->
