--- a/tamplate.html
+++ b/tamplate.html
@@ -145,7 +145,7 @@
                             <div class="button-wrapper">
                                 <a class="btn-solid-reg page-scroll"
                                     href="tamplate/1.Above Free Website Template - Free-CSS.com/above/index.html">View</a>
-                                <a class="btn-solid-reg page-scroll" href="...">Select</a>
+                                <a class="btn-solid-reg page-scroll" href="https://wa.me/+918954947472?text=Hey! Place order for temp-1.">Select</a>
                             </div>
 
                         </div>
@@ -164,7 +164,7 @@
                             <div class="button-wrapper">
                                 <a class="btn-solid-reg page-scroll"
                                     href="tamplate/2.Complex Free Website Template - Free-CSS.com/complex/index.html">View</a>
-                                <a class="btn-solid-reg page-scroll" href="...">Select</a>
+                                <a class="btn-solid-reg page-scroll" href="https://wa.me/+918954947472?text=Hey! Place order for temp-2">Select</a>
                             </div>
                         </div>
                     </div> <!-- end of card -->
@@ -180,7 +180,7 @@
                             <div class="button-wrapper">
                                 <a class="btn-solid-reg page-scroll"
                                     href="tamplate/3.DevFolio Free Website Template - Free-CSS.com/developer-portfolio-template/index.html">View</a>
-                                <a class="btn-solid-reg page-scroll" href="...">Select</a>
+                                <a class="btn-solid-reg page-scroll" href="https://wa.me/+918954947472?text=Hey! Place order for temp-3">Select</a>
                             </div>
                         </div>
                     </div> <!-- end of card -->
@@ -195,7 +195,7 @@
                             <div class="button-wrapper">
                                 <a class="btn-solid-reg page-scroll"
                                     href="tamplate/4.DevFolio Free Website Template - Free-CSS.com (1)/DevFolio/index.html">View</a>
-                                <a class="btn-solid-reg page-scroll" href="...">Select</a>
+                                <a class="btn-solid-reg page-scroll" href="https://wa.me/+918954947472?text=Hey! Place order for temp-4">Select</a>
                             </div>
                         </div>
                     </div> <!-- end of card -->
@@ -210,7 +210,7 @@
                             <div class="button-wrapper">
                                 <a class="btn-solid-reg page-scroll"
                                     href="tamplate/5.Elegance Free Website Template - Free-CSS.com/templatemo_528_elegance/index.html">View</a>
-                                <a class="btn-solid-reg page-scroll" href="...">Select</a>
+                                <a class="btn-solid-reg page-scroll" href="https://wa.me/+918954947472?text=Hey! Place order for temp-5">Select</a>
                             </div>
                         </div>
                     </div> <!-- end of card -->
@@ -225,7 +225,7 @@
                             <div class="button-wrapper">
                                 <a class="btn-solid-reg page-scroll"
                                     href="tamplate/6.Folio Free Website Template - Free-CSS.com/Folio/index.html">View</a>
-                                <a class="btn-solid-reg page-scroll" href="...">Select</a>
+                                <a class="btn-solid-reg page-scroll" href="https://wa.me/+918954947472?text=Hey! Place order for temp-6">Select</a>
                             </div>
                         </div>
                     </div> <!-- end of card -->
@@ -240,7 +240,7 @@
                             <div class="button-wrapper">
                                 <a class="btn-solid-reg page-scroll"
                                     href="tamplate/7.Girly Free Website Template - Free-CSS.com/girly/index.html">View</a>
-                                <a class="btn-solid-reg page-scroll" href="...">Select</a>
+                                <a class="btn-solid-reg page-scroll" href="https://wa.me/+918954947472?text=Hey! Place order for temp-7">Select</a>
                             </div>
                         </div>
                     </div> <!-- end of card -->
@@ -255,7 +255,7 @@
                             <div class="button-wrapper">
                                 <a class="btn-solid-reg page-scroll"
                                     href="tamplate/8.Marvel Free Website Template - Free-CSS.com/2115_marvel/index.html">View</a>
-                                <a class="btn-solid-reg page-scroll" href="...">Select</a>
+                                <a class="btn-solid-reg page-scroll" href="https://wa.me/+918954947472?text=Hey! Place order for temp-8">Select</a>
                             </div>
                         </div>
                     </div> <!-- end of card -->
@@ -270,7 +270,7 @@
                             <div class="button-wrapper">
                                 <a class="btn-solid-reg page-scroll"
                                     href="tamplate/Nickie Free Website Template - Free-CSS.com/nickie/index.html">View</a>
-                                <a class="btn-solid-reg page-scroll" href="...">Select</a>
+                                <a class="btn-solid-reg page-scroll" href="https://wa.me/+918954947472?text=Hey! Place order for temp-9">Select</a>
                             </div>
                         </div>
                     </div> <!-- end of card -->
