--- a/index.html
+++ b/index.html
@@ -339,6 +339,8 @@
                                         <a class="btn btn-primary" href="https://wa.me/+918954947472?text=Hey! I want to Place an order." role="button">Place Your Order</a>
                                         <br><br>
                                         <a class="btn btn-primary" href="/tamplate.html" role="button">Go to Demo Tamplates</a>
+                                        <br><br>
+                                        <p>Place Order Directly on our Whatsapp Number:- 8954947472</p>
                                         
                                     </div> <!-- end of text-container -->
                                 </div> <!-- end of col -->
