--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                     <!-- Card -->
                     <div class="card">
                         <div class="card-image">
-                            <img class="img-fluid" src="images/affiliate_marketing.png" alt="alternative">
+                            <img class="img-fluid" src="images/affiliate.png" alt="alternative">
                         </div>
                         <div class="card-body">
                             <h4 class="card-title">Affiliate Website</h4>
@@ -497,23 +497,23 @@
                                         <ul class="list-unstyled li-space-lg">
                                             <li class="media">
                                                 <i class="fas fa-square"></i>
-                                                <div class="media-body">About us/our story. Tell your love story so guests can get to know you better.</div>
+                                                <div class="media-body"><b>About us/our story.</b> Tell your love story so guests can get to know you better.</div>
                                             </li>
                                             <li class="media">
                                                 <i class="fas fa-square"></i>
-                                                <div class="media-body">Location. Include the address to your wedding venue(s), directions, and available accommodation nearby.</div>
+                                                <div class="media-body"><b>Location.</b> Include the address to your wedding venue(s), directions, and available accommodation nearby.</div>
                                             </li>
                                             <li class="media">
                                                 <i class="fas fa-square"></i>
-                                                <div class="media-body">Event details.</div>
+                                                <div class="media-body"><b>Event details.</b></div>
                                             </li>
                                             <li class="media">
                                                 <i class="fas fa-square"></i>
-                                                <div class="media-body">Photo gallery.</div>
+                                                <div class="media-body"><b>Photo gallery.</b></div>
                                             </li>
                                             <li class="media">
                                                 <i class="fas fa-square"></i>
-                                                <div class="media-body">RSVP</div>
+                                                <div class="media-body"><b>RSVP</b></div>
                                             </li>
                                         </ul>
 
