--- a/index.html
+++ b/index.html
@@ -125,9 +125,8 @@
                 <div class="row">
                     <div class="col-lg-6 col-xl-5">
                         <div class="text-container">
-                            <h1>Portfolio Websites Of your Choice</h1>
-                            <p class="p-large">We at The Website Builders not just building websites for you, we are
-                                building your future from this.</p>
+                            <h1>Get Websites Of your Choice</h1>
+                            <p class="p-large">“Today it’s not about ‘get the traffic’ — it’s about ‘get the targeted and relevant traffic.’” .</p>
                             <a class="btn-solid-lg page-scroll" href="https://wa.me/message/OPV44XYMS4ZEO1">Whatsapp
                                 Us</a>
                         </div> <!-- end of text-container -->
@@ -377,6 +376,7 @@
                                             <a class="btn-solid-reg page-scroll"
                                                 href="https://wa.me/+918954947472?text=Hey! I want to Place an order.">Place
                                                 Order</a>
+                                            <h1>  </h1>
                                             <a class="btn-solid-reg page-scroll" href="/tamplate.html">See Tamplates</a>
                                         </div>
 
