--- a/index.html
+++ b/index.html
@@ -539,27 +539,8 @@
                                 </div> <!-- end of col -->
                                 <div class="col-lg-6">
                                     <div class="text-container">
-                                        <h3>Analytics Control Panel</h3>
-                                        <p>Analytics control panel is important for every marketing team so it's beed
-                                            implemented from the begging and designed to produce reports based on very
-                                            little input information.</p>
-                                        <ul class="list-unstyled li-space-lg">
-                                            <li class="media">
-                                                <i class="fas fa-square"></i>
-                                                <div class="media-body">If you set it up correctly you will get acces to
-                                                    great intel</div>
-                                            </li>
-                                            <li class="media">
-                                                <i class="fas fa-square"></i>
-                                                <div class="media-body">Easy to integrate in your websites and landing
-                                                    pages</div>
-                                            </li>
-                                            <li class="media">
-                                                <i class="fas fa-square"></i>
-                                                <div class="media-body">The generated reports are important for your
-                                                    strategy</div>
-                                            </li>
-                                        </ul>
+                                        <h3>Blogging</h3>
+                                        
 
                                     </div> <!-- end of text-container -->
                                 </div> <!-- end of col -->
