--- a/index.html
+++ b/index.html
@@ -523,6 +523,8 @@
                                                 Order</a>
                                         </div>
 
+                                        <h4>  Cost ₹2999/-</h4>
+
                                     </div> <!-- end of text-container -->
                                 </div> <!-- end of col -->
                             </div> <!-- end of row -->
@@ -719,7 +721,7 @@
                             </ul>
                             <div class="button-wrapper">
                                 <a class="btn-solid-reg page-scroll"
-                                    href="https://wa.me/p/5525062897510665/918954947472">Buy Now</a>
+                                    href="https://wa.me/+918954947472?text=Hey! I want to Place an order">Buy Now</a>
                             </div>
                         </div>
                     </div> <!-- end of card -->
@@ -793,7 +795,7 @@
                             </ul>
                             <div class="button-wrapper">
                                 <a class="btn-solid-reg page-scroll"
-                                    href="https://wa.me/p/5525062897510665/918954947472">Buy Now</a>
+                                    href="https://wa.me/+918954947472?text=Hey! I want to Place an order">Buy Now</a>
                             </div>
                         </div>
                     </div> <!-- end of card -->
@@ -864,7 +866,7 @@
                             </ul>
                             <div class="button-wrapper">
                                 <a class="btn-solid-reg page-scroll"
-                                    href="https://wa.me/p/5525062897510665/918954947472">Buy Now</a>
+                                    href="https://wa.me/+918954947472?text=Hey! I want to Place an order">Buy Now</a>
                             </div>
                         </div>
                     </div> <!-- end of card -->
