--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
                 </ul>
                 <span class="nav-item">
-                    <a class="btn-outline-sm" href="https://wa.me/message/OPV44XYMS4ZEO1">Contact Us</a>
+                    <a class="btn-outline-sm" href="https://wa.me/+918954947472?text=Hii!!">Contact Us</a>
                 </span>
             </div>
         </div> <!-- end of container -->
@@ -128,7 +128,7 @@
                         <div class="text-container">
                             <h1>Get Websites Of your Choice</h1>
                             <p class="p-large">“Today it’s not about ‘get the traffic’ — it’s about ‘get the targeted and relevant traffic.’” .</p>
-                            <a class="btn-solid-lg page-scroll" href="https://wa.me/message/OPV44XYMS4ZEO1">Whatsapp
+                            <a class="btn-solid-lg page-scroll" href="https://wa.me/+918954947472?text=Hii!!">Whatsapp
                                 Us</a>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
